--- a/FarmHelper/appconfig.json
+++ b/FarmHelper/appconfig.json
@@ -11,5 +11,5 @@
   "maxHeight":263,
   "requestHandlers": [],
   "activators": [],
-  "permissions": "pixel,gamestate,overlay"
+  "permissions": ""
 }
